# zeta-speech

./: .gitignore  README.md  discord.py  main.py  pyproject.toml  requirements.txt  setup.py  test1.py  tts_functions.py  voice_driver.py  websites.py
app/: Dockerfile  requirements.txt
app/apps/: open.py  play.py
app/apps/chrome/: roll20.py  youtube.py
app/assets/: tts_funcs.py
app/src/: main.py
app/src/test_scripts/: weather.json  weather_test.py
apps/: browser_path.txt  discord.py  module_open.py  module_search.py  module_selenium.py  old_music.py  open.py  play.py  search.py  start_modules.py
apps/chrome/: chrome_path.txt  roll20.py  selenium_yt.py  websites.py  youtube.py  yt_music.py
apps/chrome/secrets/: .gitignore
assets/: class_templates.py  console.py  voice_driver.py
chrome/: youtube_music.py
scripts/: audio_plt.py  main.py  mic_test.py  test1.py  weather.json  weather_test.py
secrets/: sites.json  sites_example.json
tts/: tts_funcs.py
